--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 
 <head>
+	<title>Besiktningsman.se</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
-
+  <meta name="keywords" content="besiktningar, syner, bygg, entreprenad, ncc, skanska, jm, icontrol, icontrolapp.se, entreprenör, byggentreprenör, noteringar, dokument, ritningar, projekt, app, byggapp, iphone, ipad, selling solutions, fallstudie, lösningar, en app för byggentreprenörer, översikt, samlingsplats, ispect, ispect-portal, återrapportering, rapportering, felnotering, bygglösningar, lean production, lean startup, startup, construction, industri, besiktning, besiktiga, besikta, entreprenadbesiktning, besiktningsman, fieldlens, fieldwire, plangrid, ritningsapp, i control app, icontroll, icontrollapp, ikontrol, kontroll, arbetsledare, platschef, entreprenadingenjör, bygg app, lean bygg, projekthantering, kommunikation, ireport,">
 	<!-- Page Title -->
 	<meta name="description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
 	<meta name="robots" content="noodp" />
@@ -19,7 +20,13 @@
 	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
 	<meta name="twitter:title" content="Certifierad &amp; oberoende besiktningsman för fastighet &amp; utemiljö" />
-
+    <!-- Making the website social media friendly-->
+    <meta property="og:image" content="#image">
+    <meta property="og:title" content="Besiktningsman.se | Vi utvecklar och förnyar">
+    <meta property="og:description" content="#yourdescription">
+    <meta property="og:url" content="#yourlink">
+    <meta property="og:site_name" content="icontrol app">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<!-- Fonts and Material Icons -->
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700|Material+Icons" rel="stylesheet" type="text/css" />
 
@@ -129,9 +136,7 @@
 					<li><a href="#">Boka</a></li>
 					<li><a href="#">Tjänster</a></li>
 					<li><a href="#">Mer</a></li>
-					<li>
-						<div class="dialogTrigger" data-dialog-id="form">Nyhetsbrev</div>
-					</li>
+					<li><div class="dialogTrigger" data-dialog-id="form">Nyhetsbrev</div></li>
 				</ul>
 			</div>
 		</div>
@@ -202,29 +207,23 @@
 					<div class="fix-12-12 margin-top-6">
 						<ul class="grid fixedSpaces">
 							<li class="col-4-12 ae-3">
-								<h3 class="margin-bottom-1">Stockholm</h3>
+								<h3 class="margin-bottom-1 text-blue">Stockholm</h3>
 								<p><a href="#">Heleneborgsgatan 54, 117 32 Stockholm</a></p>
-								<h3 class="margin-bottom-1">Helsingborg</h3>
+								<h3 class="margin-bottom-1 text-blue">Helsingborg</h3>
 								<p><a href="#">Filialkontor i Helsingborg:</a></p>
-								<h3 class="margin-bottom-1">Göteborg</h3>
+							</li>
+							<li class="col-4-12 ae-3">
+								<h3 class="margin-bottom-1 text-blue">Göteborg</h3>
 								<p><a href="#">Filialkontor i Göteborg:</a></p>
-								<h3 class="margin-bottom-1">Norrköping</h3>
+								<h3 class="margin-bottom-1 text-blue">Norrköping</h3>
 								<p><a href="#">Filialkontor i Norrköping:</a></p>
-								<h3 class="margin-bottom-1">Uppsala</h3>
+								<h3 class="margin-bottom-1 text-blue">Uppsala</h3>
 								<p><a href="#">Filialkontor i Uppsala:</a></p>
 							</li>
-							<li class="col-4-12 ae-4">
-								<h3 class="margin-bottom-1">Generatal Engquires</h3>
-								<p><a href="mailto:#">general@gmail.com</a></p>
-								<h3 class="margin-bottom-1">Questions</h3>
-								<p><a href="mailto:#">questions@gmail.com</a></p>
-								<h3 class="margin-bottom-1">Partnership</h3>
-								<p><a href="mailto:#">partners@gmail.com</a></p>
-							</li>
 							<li class="col-4-12 ae-5">
-								<h3 class="margin-bottom-1">Our blog</h3>
-								<p><a href="#">Trend Breakdown: New Ways to Use the Hamburger Icon</a></p>
-								<h3 class="margin-bottom-1">Stay in touch</h3>
+								<h3 class="margin-bottom-1 text-blue">Besiktningsbloggen</h3>
+								<p><a href="https://medium.com/besiktningsbloggen">Läs vår spännande resa i att utveckla och förnya byggbranschen</a></p>
+								<h3 class="margin-bottom-1 text-blue">Följ gärna oss</h3>
 								<ul class="social-circles">
 									<li><a class="button roundButton facebook" href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#facebook"></use></svg></a></li>
 									<li><a class="button roundButton twitter" href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use></svg></a></li>
