--- a/index.html
+++ b/index.html
@@ -122,57 +122,61 @@
 
 </svg>
 
-	<!-- Panel Top #18 -->
-	<nav class="panel white shadow forceMobileView">
-		<div class="sections desktop">
-			<div class="left">
-				<a href="#home">
-					<img src="/assets/svg/bm_logo.svg" style="width: 260px;"/>
-				</a>
-			</div>
-			<div class="right">
-				<ul class="menu uppercase crop">
-					<li><a href="#">Om oss</a></li>
-					<li><a href="#">Boka</a></li>
-					<li><a href="#">Tjänster</a></li>
-					<li><a href="#">Mer</a></li>
-					<li><div class="dialogTrigger" data-dialog-id="form">Nyhetsbrev</div></li>
-				</ul>
-			</div>
-		</div>
-		<div class="sections compact hidden">
-			<div class="left"><a href="#"><svg style="width:107px;height:31px"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use></svg></a></div>
-			<div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
-		</div>
-	</nav>
+<!-- Panel Top #10 -->
+<nav class="panel top forceMobileView">
+  <div class="sections desktop">
+    <div class="left">
+      <ul class="menu uppercase crop small">
+        <li><a href="#">Vårt erbjudande</a></li>
+        <li><a href="#">Nyheter</a></li>
+        <li><a href="#">Karriär</a></li>
+      </ul>
+    </div>
+    <div class="center"><a href="#"> <img src="/assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;">  </a></div>
+    <div class="right">
+      <ul class="menu uppercase crop small">
+        <li><a href="#">Om oss</a></li>
+        <li><a href="#">Kontakt</a></li>
+        <li><a href="#">Mer</a></li>
+        <li><a href="http://medium.com/besiktningsbloggen">Blog</a></li>
+      </ul>
+    </div>
+  </div>
+  <div class="sections compact hidden">
+    <div class="left"><a href="#"><svg style="width:107px;height:31px"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use></svg></a></div>
+    <div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
+  </div>
+</nav>
 
-	<!-- Sidebar -->
-	<nav class="sidebar deepPurple" data-sidebar-id="1">
-		<div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
-		<div class="content">
-			<a href="#" class="logo"><svg width="120" height="50"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use></svg></a>
-			<ul class="mainMenu uppercase">
-				<li><a href="#">Tour</a></li>
-				<li><a href="#">Upgrade</a></li>
-				<li><a href="#">Help</a></li>
-				<li><a href="#">Explore</a></li>
-			</ul>
-			<ul class="subMenu">
-				<li><a href="#">About Us</a></li>
-				<li><a href="#">Blog</a></li>
-				<li><a href="#">Press & Media</a></li>
-				<li><a href="#">Terms of Use</a></li>
-				<li><a href="#">Privacy Policy</a></li>
-				<li><a href="#">Contact Us</a></li>
-			</ul>
-			<ul class="social">
-				<li><a href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use></svg></a></li>
-				<li><a href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#facebook"></use></svg></a></li>
-				<li><a href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#googlePlus"></use></svg></a></li>
-				<li><a href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#pinterest"></use></svg></a></li>
-			</ul>
-		</div>
-	</nav>
+<!-- Sidebar -->
+<nav class="sidebar deepPurple" data-sidebar-id="1">
+  <div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
+  <div class="content">
+    <a href="#" class="logo"><svg width="120" height="50"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use></svg></a>
+    <ul class="mainMenu uppercase">
+      <li><a href="#">Tour</a></li>
+      <li><a href="#">Upgrade</a></li>
+      <li><a href="#">Journey</a></li>
+      <li><a href="#">Learn</a></li>
+      <li><a href="#">Discover</a></li>
+      <li><a href="#">Help</a></li>
+    </ul>
+    <!-- <ul class="subMenu">
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press & Media</a></li>
+      <li><a href="#">Terms of Use</a></li>
+      <li><a href="#">Privacy Policy</a></li>
+      <li><a href="#">Contact Us</a></li>
+    </ul> -->
+    <ul class="social">
+      <li><a href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use></svg></a></li>
+      <li><a href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#facebook"></use></svg></a></li>
+      <li><a href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#googlePlus"></use></svg></a></li>
+      <li><a href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#pinterest"></use></svg></a></li>
+    </ul>
+  </div>
+</nav>
 
 	<!-- Slide 1 (#19) -->
 	<section class="slide fade" id="home">
@@ -183,7 +187,7 @@
 					<div class="fix-10-12">
 						<h1 class="ae-1">Välkommen till Besiktningsman.se</h1>
 						<div class="ae-2">
-							<p class="hero">Den digitala besiktningsprocessen</p>
+							<p class="hero">Digital besiktning för lönsammare byggprojekt</p>
 						</div>
 						<a class="button blue ae-5 fromCenter">FÖRETAG</a><a class="button white ae-6 fromCenter">BRF / PRIVAT</a>
 					</div>
@@ -193,7 +197,65 @@
 		</div>
 		<div class="background" style="background-image:url(assets/img/backgrounds/ispect_close.jpg)"></div>
 	</section>
+	<!-- Slide #36 besiktnings statistik -->
+<section class="slide whiteSlide">
+  <div class="content">
+    <div class="container">
+      <div class="wrap top">
 
+        <div class="fix-10-12 toCenter">
+          <!-- <img class="margin-bottom-1 ae-1 fromCenter" src="assets/img/icon-36.png" alt="App Icon" width="70"/>
+          <div class="ae-2"><p class="hero">Community</p></div> -->
+          <h1 class="ae-3">Entreprenadbesiktning som ökar lönsamheten</h1>
+          <div class="ae-4">
+						<p>
+							Besiktningsman.se erbjuder för entreprenadbesiktning som ger ett aktivt stöd för sänkt kostnad och ökad lönsamhet i projekt.
+							<br> Ger möjlighet att överlämna ett färdigt projekt med noll byggfel på avtalad dag.
+						</p>
+					</div>
+        </div>
+        <div class="fix-12-12 ae-5">
+          <img class="ipad-36" src="assets/img/ispect/stats.png" data-action="zoom" alt="iPad App"/>
+        </div>
+
+      </div>
+    </div>
+  </div>
+  <div class="background" style="background-image:url(assets/img/img-36.jpg)"></div>
+</section>
+		<!-- Slide #32 ispect -->
+		<section class="slide whiteSlide kenBurns fromLeft" style="box-shadow: inset 0 -13px 19px 0 rgba(0,0,0,.09);">
+		  <div class="content">
+		    <div class="container">
+		      <div class="wrap">
+
+		        <div class="fix-12-12">
+		          <ul class="flex reverse">
+		            <li class="col-6-12 left cell-32">
+		              <h1 class="ae-2">Besiktning med iSpect ger snabb leverans av besiktningsutlåtandet.</h1>
+									<div class="ae-3"><p>iSpect ger direkt felavhjälpning, lättillgänglig och säker dokumentation samt noll byggfel.</p></div>
+		              <!-- <ul class="items-32">
+		                <li class="fix-4-12 toLeft text-32">
+		                  <h3 class="ae-4">Fashion</h3>
+		                  <div class="ae-5"><p class="small">Fashion is a language that creates itself in clothes to interpret reality.</p></div>
+		                </li>
+		                <li class="fix-4-12 toLeft text-32">
+		                  <h3 class="ae-6">Creativity</h3>
+		                  <div class="ae-7"><p class="small">Clear thinking at the wrong moment can stifle creativity.</p></div>
+		                </li>
+		              </ul> -->
+		            </li>
+		            <li class="col-6-12 left ae-1 fromRight">
+		              <img class="ipad-32" data-action="zoom" style="width: 500px;" src="assets/img/ispect/ipadfront.png" alt="iPad Image"/>
+		            </li>
+		          </ul>
+		        </div>
+
+		      </div>
+		    </div>
+		  </div>
+		  <div class="background" style="background-image:url(assets/img/img-32.jpg)"></div>
+		</section>
 	<!-- Slide 2 (#56) -->
 	<section class="slide whiteSlide">
 		<div class="content">
