--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <li><a href="#">Karriär</a></li>
       </ul>
     </div>
-    <div class="center"><a href="#"> <img src="/assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;">  </a></div>
+    <div class="center"><a href="#"> <img src="assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;">  </a></div>
     <div class="right">
       <ul class="menu uppercase crop small">
         <li><a href="#">Om oss</a></li>
