--- a/index.html
+++ b/index.html
@@ -123,18 +123,18 @@
 </svg>
 
 <!-- Panel Top #10 -->
-<nav class="panel top forceMobileView">
+<nav class="panel top forceMobileView white soft-shadow">
   <div class="sections desktop">
     <div class="left">
-      <ul class="menu uppercase crop small">
+      <ul class="menu crop small">
         <li><a href="#">Vårt erbjudande</a></li>
         <li><a href="#">Nyheter</a></li>
         <li><a href="#">Karriär</a></li>
       </ul>
     </div>
-    <div class="center"><a href="#"> <img src="assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;">  </a></div>
+    <div class="center"><a href="#home"> <img src="assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;">  </a></div>
     <div class="right">
-      <ul class="menu uppercase crop small">
+      <ul class="menu crop small">
         <li><a href="#">Om oss</a></li>
         <li><a href="#">Kontakt</a></li>
         <li><a href="#">Mer</a></li>
@@ -179,7 +179,7 @@
 </nav>
 
 	<!-- Slide 1 (#19) -->
-	<section class="slide fade" id="home">
+	<section class="slide fade" data-name="home">
 		<div class="content">
 			<div class="container">
 				<div class="wrap">
@@ -189,7 +189,7 @@
 						<div class="ae-2">
 							<p class="hero">Digital besiktning för lönsammare byggprojekt</p>
 						</div>
-						<a class="button blue ae-5 fromCenter">FÖRETAG</a><a class="button white ae-6 fromCenter">BRF / PRIVAT</a>
+						<a class="button white text-blue ae-5 fromCenter">FÖRETAG</a><a class="button white ae-6 fromCenter">BRF / PRIVAT</a>
 					</div>
 
 				</div>
@@ -304,6 +304,7 @@
 			</div>
 		</div>
 	</section>
+
 	<!-- Email Form Dialog -->
 	<div class="dialog hidden" data-dialog-id="form" data-on-submit-acton="close" data-set-cookie="30">
 		<div class="close" data-dialog-action="close"></div>
@@ -321,7 +322,12 @@
 	</div>
 	<!-- Preloader -->
 	<div class="loadingIcon"><svg class="loading-icon" id="loading-circle" viewBox="0 0 18 18"><circle class="circle" opacity=".1" stroke="#fff" stroke-width="2" stroke-miterlimit="10" cx="9" cy="9" r="8" fill="none"></circle><circle class="dash" stroke-width="2" stroke-linecap="round" stroke-miterlimit="10" stroke-dasharray="1,100" cx="9" cy="9" r="8" fill="none"></circle></svg></div>
-
+	<!-- Panel Bottom #22 -->
+	<nav class="panel bottom">
+	  <div class="sections">
+	    <div class="center"><span class="nextSlide"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#arrow-down"></use></svg></span></div>
+	  </div>
+	</nav>
 </body>
 
 </html>
