header height + header title wrap adjusted

--- a/index.html
+++ b/index.html
@@ -179,10 +179,10 @@
 </nav>
 
 	<!-- Slide 1 (#19) -->
-	<section class="slide fade" data-name="home">
+	<section class="slide fade" data-name="home" style="height: 700px;    box-shadow: inset 0 -13px 19px 0 rgba(0,0,0,.09);">
 		<div class="content">
 			<div class="container">
-				<div class="wrap">
+				<div class="wrap" style="padding: calc(8.56% + 86px) calc(8% + 15px);    display: -webkit-box;">
 
 					<div class="fix-10-12">
 						<h1 class="ae-1">Välkommen till Besiktningsman.se</h1>
