intro header fixes re-added slides

--- a/index.html
+++ b/index.html
@@ -179,17 +179,17 @@
 </nav>
 
 	<!-- Slide 1 (#19) -->
-	<section class="slide fade" data-name="home" style="height: 700px;    box-shadow: inset 0 -13px 19px 0 rgba(0,0,0,.09);">
+	<section class="slide fade" data-name="home" id="intro">
 		<div class="content">
 			<div class="container">
-				<div class="wrap" style="padding: calc(8.56% + 86px) calc(8% + 15px);    display: -webkit-box;">
+				<div class="container-lg">
 
 					<div class="fix-10-12">
 						<h1 class="ae-1">Välkommen till Besiktningsman.se</h1>
 						<div class="ae-2">
 							<p class="hero">Digital besiktning för lönsammare byggprojekt</p>
 						</div>
-						<a class="button white text-blue ae-5 fromCenter">FÖRETAG</a><a class="button white ae-6 fromCenter">BRF / PRIVAT</a>
+						<a class="common-Button white text-blue ae-5 fromCenter" style="margin-right: 20px;">FÖRETAG</a><a class="common-Button white ae-6 fromCenter">BRF / PRIVAT</a>
 					</div>
 
 				</div>
@@ -197,15 +197,46 @@
 		</div>
 		<div class="background" style="background-image:url(assets/img/backgrounds/ispect_close.jpg)"></div>
 	</section>
-	<!-- Slide #36 besiktnings statistik -->
+<!-- Slide #61 -->
+<!-- <section class="slide whiteSlide kenBurns">
+  <div class="content">
+    <div class="container">
+      <div class="wrap">
+        <div class="fix-12-12">
+          <ul class="flex verticalCenter reverse">
+            <li class="col-6-12 left">
+							<img class="margin-bottom-1 ae-1 fromCenter" src="assets/svg/graph.svg" alt="App Icon" width="50"/>
+              <h1 class="ae-2">Entreprenadbesiktning som ökar lönsamheten</h1>
+              <div class="ae-3">
+								<p>
+									Besiktningsman.se erbjuder för entreprenadbesiktning som ger ett aktivt stöd för sänkt kostnad och ökad lönsamhet i projekt.
+									<br> Ger möjlighet att överlämna ett färdigt projekt med noll byggfel på avtalad dag.
+								</p>
+							</div>
+            </li>
+            <li class="col-6-12 left" style="margin-bottom: 9%;">
+							<img class="margin-bottom-1 ae-1 fromCenter" src="assets/svg/graph.svg" alt="App Icon" width="50"/>
+              <h1 class="ae-2">iSpect ger snabb leverans av besiktningsutlåtandet.</h1>
+              <div class="ae-3">
+                <p>Direkt felavhjälpning, lättillgänglig och säker dokumentation samt noll byggfel.</p>
+              </div>
+
+              </ul>
+            </li>
+          </ul>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</section> -->
 <section class="slide whiteSlide">
   <div class="content">
     <div class="container">
       <div class="wrap top">
 
         <div class="fix-10-12 toCenter">
-          <!-- <img class="margin-bottom-1 ae-1 fromCenter" src="assets/img/icon-36.png" alt="App Icon" width="70"/>
-          <div class="ae-2"><p class="hero">Community</p></div> -->
+          <!-- <img class="margin-bottom-1 ae-1 fromCenter" src="assets/svg/bm_logo.svg" alt="App Icon" width="300"/> -->
           <h1 class="ae-3">Entreprenadbesiktning som ökar lönsamheten</h1>
           <div class="ae-4">
 						<p>
@@ -232,18 +263,18 @@
 		        <div class="fix-12-12">
 		          <ul class="flex reverse">
 		            <li class="col-6-12 left cell-32">
-		              <h1 class="ae-2">Besiktning med iSpect ger snabb leverans av besiktningsutlåtandet.</h1>
-									<div class="ae-3"><p>iSpect ger direkt felavhjälpning, lättillgänglig och säker dokumentation samt noll byggfel.</p></div>
-		              <!-- <ul class="items-32">
+		              <h1 class="ae-2">iSpect ger snabb leverans av besiktningsutlåtandet.</h1>
+									<div class="ae-3"><p>Direkt felavhjälpning, lättillgänglig och säker dokumentation samt noll byggfel.</p></div>
+		              <ul class="items-32">
 		                <li class="fix-4-12 toLeft text-32">
-		                  <h3 class="ae-4">Fashion</h3>
-		                  <div class="ae-5"><p class="small">Fashion is a language that creates itself in clothes to interpret reality.</p></div>
+		                  <h3 class="ae-4">Exempel 1</h3>
+		                  <div class="ae-5"><p class="small">Tillåter underentreprenörer att avhjälpa fel samma dag</p></div>
 		                </li>
 		                <li class="fix-4-12 toLeft text-32">
-		                  <h3 class="ae-6">Creativity</h3>
-		                  <div class="ae-7"><p class="small">Clear thinking at the wrong moment can stifle creativity.</p></div>
+		                  <h3 class="ae-6">Exempel 2</h3>
+		                  <div class="ae-7"><p class="small">Skapar transparens i kommunikation</p></div>
 		                </li>
-		              </ul> -->
+		              </ul>
 		            </li>
 		            <li class="col-6-12 left ae-1 fromRight">
 		              <img class="ipad-32" data-action="zoom" style="width: 500px;" src="assets/img/ispect/ipadfront.png" alt="iPad Image"/>
@@ -259,8 +290,8 @@
 	<!-- Slide 2 (#56) -->
 	<section class="slide whiteSlide">
 		<div class="content">
-			<div class="container">
-				<div class="wrap">
+			<div class="container" style="height: auto !important;">
+				<div class="">
 
 					<!-- <div class="fix-10-12">
 						<h1 class="ae-1">Most of what we see that we call information doesn&rsquo;t inform, and most questions do not have a quest.</h1>
@@ -289,12 +320,7 @@
 								<ul class="social-circles">
 									<li><a class="button roundButton facebook" href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#facebook"></use></svg></a></li>
 									<li><a class="button roundButton twitter" href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use></svg></a></li>
-									<li><a class="button roundButton tumblr" href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#tumblr"></use></svg></a></li>
-									<li><a class="button roundButton googlePlus" href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#googlePlus"></use></svg></a></li>
-									<!-- <li><a class="button roundButton instagram" href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#instagram"></use></svg></a></li> -->
-									<!-- <li><a class="button roundButton youtube" href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#youtube"></use></svg></a></li> -->
-									<!-- <li><a class="button roundButton linkedin" href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#linkedin"></use></svg></a></li> -->
-									<!-- <li><a class="button roundButton pinterest" href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#pinterest"></use></svg></a></li> -->
+									<li><a class="button roundButton linkedin" href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#linkedin"></use></svg></a></li>
 								</ul>
 							</li>
 						</ul>
