--- a/index.html
+++ b/index.html
@@ -182,13 +182,11 @@
 	<section class="slide fade" data-name="home" id="intro">
 		<div class="content">
 			<div class="container">
-				<div class="container-lg">
+				<div class="container-lg center margin-top-2">
 
 					<div class="fix-10-12">
-						<h1 class="ae-1">Välkommen till Besiktningsman.se</h1>
-						<div class="ae-2">
-							<p class="hero">Digital besiktning för lönsammare byggprojekt</p>
-						</div>
+						<h1 class="hero-title">Välkommen till Besiktningsman.se</h1>
+						<p class="hero">Digital besiktning för lönsammare byggprojekt</p>
 						<a class="common-Button white text-blue ae-5 fromCenter" style="margin-right: 20px;">FÖRETAG</a><a class="common-Button white ae-6 fromCenter">BRF / PRIVAT</a>
 					</div>
 
@@ -255,7 +253,7 @@
   <div class="background" style="background-image:url(assets/img/img-36.jpg)"></div>
 </section>
 		<!-- Slide #32 ispect -->
-		<section class="slide whiteSlide kenBurns fromLeft" style="box-shadow: inset 0 -13px 19px 0 rgba(0,0,0,.09);">
+		<section class="slide whiteSlide kenBurns fromLeft">
 		  <div class="content">
 		    <div class="container">
 		      <div class="wrap">
@@ -272,7 +270,7 @@
 		                </li>
 		                <li class="fix-4-12 toLeft text-32">
 		                  <h3 class="ae-6">Exempel 2</h3>
-		                  <div class="ae-7"><p class="small">Skapar transparens i kommunikation</p></div>
+		                  <div class="ae-7"><p class="small">Skapar transparens i kommunikationen</p></div>
 		                </li>
 		              </ul>
 		            </li>
@@ -285,19 +283,13 @@
 		      </div>
 		    </div>
 		  </div>
-		  <div class="background" style="background-image:url(assets/img/img-32.jpg)"></div>
 		</section>
 	<!-- Slide 2 (#56) -->
-	<section class="slide whiteSlide">
+	<section class="slide whiteSlide" style="background: rgba(246, 247, 249, 0.64);">
 		<div class="content">
-			<div class="container" style="height: auto !important;">
-				<div class="">
-
-					<!-- <div class="fix-10-12">
-						<h1 class="ae-1">Most of what we see that we call information doesn&rsquo;t inform, and most questions do not have a quest.</h1>
-						<a href="#" class="button pink ae-2 margin-top-2">Say hello</a>
-					</div> -->
-					<div class="fix-12-12 margin-top-6">
+			<div class="container" style="height: auto !important;margin-top: 5%;">
+				<div class="container-lg">
+					<div class="fix-12-12">
 						<ul class="grid fixedSpaces">
 							<li class="col-4-12 ae-3">
 								<h3 class="margin-bottom-1 text-blue">Stockholm</h3>
@@ -349,11 +341,6 @@
 	<!-- Preloader -->
 	<div class="loadingIcon"><svg class="loading-icon" id="loading-circle" viewBox="0 0 18 18"><circle class="circle" opacity=".1" stroke="#fff" stroke-width="2" stroke-miterlimit="10" cx="9" cy="9" r="8" fill="none"></circle><circle class="dash" stroke-width="2" stroke-linecap="round" stroke-miterlimit="10" stroke-dasharray="1,100" cx="9" cy="9" r="8" fill="none"></circle></svg></div>
 	<!-- Panel Bottom #22 -->
-	<nav class="panel bottom">
-	  <div class="sections">
-	    <div class="center"><span class="nextSlide"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#arrow-down"></use></svg></span></div>
-	  </div>
-	</nav>
 </body>
 
 </html>
