fixing the mobile side menu colors and logo

--- a/index.html
+++ b/index.html
@@ -143,42 +143,44 @@
     </div>
   </div>
   <div class="sections compact hidden">
-    <div class="left"><a href="#"><svg style="width:107px;height:31px"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use></svg></a></div>
+    <div class="left"><a href="#home"><img src="assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a></div>
     <div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
   </div>
 </nav>
 
 <!-- Sidebar -->
-<nav class="sidebar deepPurple" data-sidebar-id="1">
+<nav class="sidebar white" data-sidebar-id="1">
   <div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
   <div class="content">
-    <a href="#" class="logo"><svg width="120" height="50"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use></svg></a>
-    <ul class="mainMenu uppercase">
-      <li><a href="#">Tour</a></li>
-      <li><a href="#">Upgrade</a></li>
-      <li><a href="#">Journey</a></li>
-      <li><a href="#">Learn</a></li>
-      <li><a href="#">Discover</a></li>
-      <li><a href="#">Help</a></li>
+    <a href="#home" class="logo"><img src="assets/svg/bm_logo.svg" alt=""></a>
+    <ul class="mainMenu text-blue">
+      <li><a href="#">Vårt erbjudande</a></li>
+			<br>
+			<br>
+      <li><a href="#">Kontakt</a></li>
+			<br>
+			<br>
+			<li><a href="#">Karriär</a></li>
+			<br>
+			<br>
+      <li><a href="#">Om oss</a></li>
+			<br>
+			<br>
     </ul>
-    <!-- <ul class="subMenu">
-      <li><a href="#">About Us</a></li>
+    <ul class="subMenu">
+			<li><a href="#">Mer</a></li>
+			<br>
+			<br>
       <li><a href="#">Blog</a></li>
-      <li><a href="#">Press & Media</a></li>
-      <li><a href="#">Terms of Use</a></li>
-      <li><a href="#">Privacy Policy</a></li>
-      <li><a href="#">Contact Us</a></li>
-    </ul> -->
-    <ul class="social">
-      <li><a href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use></svg></a></li>
-      <li><a href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#facebook"></use></svg></a></li>
-      <li><a href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#googlePlus"></use></svg></a></li>
-      <li><a href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#pinterest"></use></svg></a></li>
+			<br>
+			<br>
+			<li><a href="#">Nyheter</a></li>
     </ul>
+
   </div>
 </nav>
 
-	<!-- Slide 1 (#19) -->
+	<!-- INTRO SLIDE -->
 	<section class="slide fade" data-name="home" id="intro">
 		<div class="content">
 			<div class="container">
@@ -195,68 +197,35 @@
 		</div>
 		<div class="background" style="background-image:url(assets/img/backgrounds/ispect_close.jpg)"></div>
 	</section>
-<!-- Slide #61 -->
-<!-- <section class="slide whiteSlide kenBurns">
-  <div class="content">
-    <div class="container">
-      <div class="wrap">
-        <div class="fix-12-12">
-          <ul class="flex verticalCenter reverse">
-            <li class="col-6-12 left">
-							<img class="margin-bottom-1 ae-1 fromCenter" src="assets/svg/graph.svg" alt="App Icon" width="50"/>
-              <h1 class="ae-2">Entreprenadbesiktning som ökar lönsamheten</h1>
-              <div class="ae-3">
-								<p>
-									Besiktningsman.se erbjuder för entreprenadbesiktning som ger ett aktivt stöd för sänkt kostnad och ökad lönsamhet i projekt.
-									<br> Ger möjlighet att överlämna ett färdigt projekt med noll byggfel på avtalad dag.
-								</p>
-							</div>
-            </li>
-            <li class="col-6-12 left" style="margin-bottom: 9%;">
-							<img class="margin-bottom-1 ae-1 fromCenter" src="assets/svg/graph.svg" alt="App Icon" width="50"/>
-              <h1 class="ae-2">iSpect ger snabb leverans av besiktningsutlåtandet.</h1>
-              <div class="ae-3">
-                <p>Direkt felavhjälpning, lättillgänglig och säker dokumentation samt noll byggfel.</p>
-              </div>
-
-              </ul>
-            </li>
-          </ul>
-        </div>
-
-      </div>
-    </div>
-  </div>
-</section> -->
-<section class="slide whiteSlide">
-  <div class="content">
-    <div class="container">
-      <div class="wrap top">
-
-        <div class="fix-10-12 toCenter">
-          <!-- <img class="margin-bottom-1 ae-1 fromCenter" src="assets/svg/bm_logo.svg" alt="App Icon" width="300"/> -->
-          <h1 class="ae-3">Entreprenadbesiktning som ökar lönsamheten</h1>
-          <div class="ae-4">
-						<p>
-							Besiktningsman.se erbjuder för entreprenadbesiktning som ger ett aktivt stöd för sänkt kostnad och ökad lönsamhet i projekt.
-							<br> Ger möjlighet att överlämna ett färdigt projekt med noll byggfel på avtalad dag.
-						</p>
-					</div>
-        </div>
-        <div class="fix-12-12 ae-5">
-          <img class="ipad-36" src="assets/img/ispect/stats.png" data-action="zoom" alt="iPad App"/>
-        </div>
-
-      </div>
-    </div>
-  </div>
-  <div class="background" style="background-image:url(assets/img/img-36.jpg)"></div>
+<!-- E-besiktning SLIDE -->
 </section>
-		<!-- Slide #32 ispect -->
 		<section class="slide whiteSlide kenBurns fromLeft">
 		  <div class="content">
-		    <div class="container">
-		      <div class="wrap">
+		    <div class="container" style="height: 100% !important;">
+		      <div class="wrap" style="display: block;">
+
+		        <div class="fix-12-12">
+		          <ul class="flex reverse">
+		            <li class="col-6-12 left cell-32">
+		              <h1 class="ae-2">Entreprenadbesiktning som ökar lönsamheten.</h1>
+									<div class="ae-3"><p>Besiktningsman.se erbjuder för entreprenadbesiktning som ger ett aktivt stöd för sänkt kostnad och ökad lönsamhet i projekt.
+									<br> Ger möjlighet att överlämna ett färdigt projekt med noll byggfel på avtalad dag.</p></div>
+		            </li>
+		            <li class="col-6-12 left ae-1 fromRight">
+		              <img class="ipad-32" data-action="zoom" style="width: 1000px;" src="assets/img/ispect/stats.png" alt="iPad Image"/>
+		            </li>
+		          </ul>
+		        </div>
+
+		      </div>
+		    </div>
+		  </div>
+		</section>
+		<!-- iSpect pros slide -->
+		<section class="slide whiteSlide kenBurns fromLeft">
+		  <div class="content">
+		    <div class="container" style="height: 100% !important;">
+		      <div class="wrap" style="display: block;">
 
 		        <div class="fix-12-12">
 		          <ul class="flex reverse">
