--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <li><a href="#">Karriär</a></li>
       </ul>
     </div>
-    <div class="center"><a href="#home"> <img src="assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;">  </a></div>
+    <div class="center"><a href="/"> <img src="assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;">  </a></div>
     <div class="right">
       <ul class="menu crop small bold">
         <li><a href="#">Om oss</a></li>
@@ -143,7 +143,7 @@
     </div>
   </div>
   <div class="sections compact hidden">
-    <div class="left"><a href="#home"><img src="assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a></div>
+    <div class="left"><a href="/"><img src="assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a></div>
     <div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
   </div>
 </nav>
@@ -152,7 +152,7 @@
 <nav class="sidebar white" data-sidebar-id="1">
   <div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
   <div class="content">
-    <a href="#home" class="logo"><img src="assets/svg/bm_logo.svg" alt=""></a>
+    <a href="/" class="logo"><img src="assets/svg/bm_logo.svg" alt=""></a>
     <ul class="mainMenu text-blue">
       <li><a href="#">Vårt erbjudande</a></li>
 			<br>
