--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -32,16 +32,16 @@
 
 
 	<!-- Styles -->
-	<link href="/css/slides.css" rel="stylesheet" type="text/css">
+	<link href="../css/slides.css" rel="stylesheet" type="text/css">
 
 	<!-- Custom Styles -->
 	<!--link href="css/custom.css" rel="stylesheet" type="text/css"-->
 
 	<!-- Scripts -->
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-	<script src="/js/plugins.js" type="text/javascript" name="plugins"></script>
-	<script src="/js/slides.js" type="text/javascript" name="main-scripts"></script>
-	<script src="/ajax-email.php" type="text/javascript" name="plugins"></script>
+	<script src="../js/plugins.js" type="text/javascript" name="plugins"></script>
+	<script src="../js/slides.js" type="text/javascript" name="main-scripts"></script>
+	<script src="../ajax-email.php" type="text/javascript" name="plugins"></script>
 	<!-- Custom Scripts -->
 	<!--script src="js/custom.js" type="text/javascript" name="custom-scripts"></script-->
 
