--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -192,13 +192,13 @@
 						<div class="pad shadow selected ">
 							<form action="ajax-email.php" id="contact-form" method="post" class="wide center" data-ajax-form="true">
 								<div class="label cropTop"><label class="cropTop left small bold" for="name55">För och efternamn</label></div>
-								<input class="stroke left wide" id="name55" type="name" name="name" placeholder="Ert namn..." required/>
+								<input class="stroke left wide" id="name55" type="name" name="yourName" placeholder="Ert namn..." required/>
 								<div class="label"><label class="left small bold" for="email55">E-post adress</label></div>
-								<input class="stroke left wide" id="email55" type="email" name="email" placeholder="E-post adress..." required/>
+								<input class="stroke left wide" id="email55" type="email" name="yourEmail" placeholder="E-post adress..." required/>
 								<div class="label cropTop"><label class="cropTop left small bold" for="name55">Telefon</label></div>
-								<input class="stroke left wide" id="telephone55" type="text" name="telephone number" placeholder="Telefon nr..." required/>
+								<input class="stroke left wide" id="phone55" type="text" name="yourPhone" placeholder="Telefon nr..." required/>
 								<div class="label"><label class="left small bold" for="message55">Ditt meddelande...</label></div>
-								<textarea class="left " id="message55" type="text" name="message" placeholder="Ditt meddelande..." required></textarea>
+								<textarea class="left " id="message55" type="text" name="yourMessage" placeholder="Ditt meddelande..." required></textarea>
 								<input class="common-Button wide blue cropBottom" type="submit" name="submit" value="Skicka meddelandet" data-success-text="Skickat!" data-success-class="green"/>
 							</form>
 						</div>
