--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Besiktningsman.se</title>
+	<title>Besiktningsman.se | Kontakt</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -41,7 +41,6 @@
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 	<script src="../js/plugins.js" type="text/javascript" name="plugins"></script>
 	<script src="../js/slides.js" type="text/javascript" name="main-scripts"></script>
-	<script src="../ajax-email.php" type="text/javascript" name="plugins"></script>
 	<!-- Custom Scripts -->
 	<!--script src="js/custom.js" type="text/javascript" name="custom-scripts"></script-->
 
@@ -127,23 +126,23 @@
   <div class="sections desktop">
     <div class="left">
       <ul class="menu crop small bold">
-        <li><a href="#">Vårt erbjudande</a></li>
-        <li><a href="#">Nyheter</a></li>
-        <li><a href="#">Karriär</a></li>
+        <li><a href="../erbjudande/">Vårt erbjudande</a></li>
+        <li><a href="../nyheter/">Nyheter</a></li>
+        <li><a href="../karriar/">Karriär</a></li>
       </ul>
     </div>
     <div class="center"><a href="/"> <img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;">  </a></div>
     <div class="right">
       <ul class="menu crop small bold">
-        <li><a href="#">Om oss</a></li>
-        <li><a href="kontakt/">Kontakt</a></li>
-        <li><a href="#">Mer</a></li>
+        <li><a href="../om_oss/">Om oss</a></li>
+        <li><a href="../kontakt/">Kontakt</a></li>
+        <li><a href="../mer/">Mer</a></li>
         <li><a href="http://medium.com/besiktningsbloggen">Blog</a></li>
       </ul>
     </div>
   </div>
   <div class="sections compact hidden">
-    <div class="left"><a href="#home"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a></div>
+    <div class="left"><a href="/"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a></div>
     <div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
   </div>
 </nav>
@@ -152,29 +151,29 @@
 <nav class="sidebar white" data-sidebar-id="1">
   <div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
   <div class="content">
-    <a href="#home" class="logo"><img src="../assets/svg/bm_logo.svg" alt=""></a>
+    <a href="/" class="logo"><img src="../assets/svg/bm_logo.svg" alt=""></a>
     <ul class="mainMenu text-blue">
-      <li><a href="#">Vårt erbjudande</a></li>
+      <li><a href="../erbjudande/">Vårt erbjudande</a></li>
 			<br>
 			<br>
-      <li><a href="kontakt/">Kontakt</a></li>
+      <li><a href="../kontakt/">Kontakt</a></li>
 			<br>
 			<br>
-			<li><a href="#">Karriär</a></li>
+			<li><a href="../karriar/">Karriär</a></li>
 			<br>
 			<br>
-      <li><a href="#">Om oss</a></li>
+      <li><a href="../om_oss/">Om oss</a></li>
 			<br>
 			<br>
     </ul>
     <ul class="subMenu">
-			<li><a href="#">Mer</a></li>
+			<li><a href="../mer/">Mer</a></li>
 			<br>
 			<br>
-      <li><a href="#">Blog</a></li>
+      <li><a href="http://medium.com/besiktningsbloggen">Blog</a></li>
 			<br>
 			<br>
-			<li><a href="#">Nyheter</a></li>
+			<li><a href="../nyheter/">Nyheter</a></li>
     </ul>
 
   </div>
