--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <div class="center"><a href="/"> <img src="assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;">  </a></div>
     <div class="right">
       <ul class="menu crop small bold">
-        <li><a href="#">Om oss</a></li>
+        <li><a href="om_oss/">Om oss</a></li>
         <li><a href="kontakt/">Kontakt</a></li>
         <li><a href="#">Mer</a></li>
         <li><a href="http://medium.com/besiktningsbloggen">Blog</a></li>
@@ -163,7 +163,7 @@
 			<li><a href="#">Karriär</a></li>
 			<br>
 			<br>
-      <li><a href="#">Om oss</a></li>
+      <li><a href="om_oss/">Om oss</a></li>
 			<br>
 			<br>
     </ul>
@@ -183,8 +183,8 @@
 	<!-- INTRO SLIDE -->
 	<section class="slide fade kenBurns zoomout" data-name="home" id="intro">
 		<div class="content">
-			<div class="container">
-				<div class="container-lg center margin-top-2">
+			<div class="container" style="height: 760px;">
+				<div class="wrap">
 
 					<div class="fix-10-12">
 						<h1 class="hero-title">Välkommen till Besiktningsman.se</h1>
