adding their literal fuckton of team pictures to the about us-page

--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -189,7 +189,7 @@
 	    <div class="container" style="height: 760px;">
 	      <div class="wrap">
           <h1>Vi på Besiktningsman.se</h1>
-         	<p>Vi är ett fristående besiktningsföretag som utför besiktningar objektivt och opartiskt enligt gällande bygg- och branschregler.</p>
+         	<p style="max-width: 50%;margin:0 auto;">Vi är ett fristående besiktningsföretag som utför besiktningar objektivt <br>och opartiskt enligt gällande bygg- och branschregler.</p>
         </div>
 
 	      </div>
@@ -197,6 +197,205 @@
 	  </div>
 	  <div class="background" style="background-image:url(../assets/img/backgrounds/ispect_close.jpg)"></div>
 	</section>
+<!-- Slide #90 -->
+<section class="slide whiteSlide fade kenBurns">
+  <div class="content">
+    <div class="container">
+      <div class="wrap">
+
+        <div class="fix-12-12">
+          <ul class="flex left">
+            <li class="col-10-12 fromBottomLeft">
+              <h1 class="ae-2">Sedan starten 2003 har vi utfört ett stort antal besiktningar åt såväl konsumenter som etablerade företag inom bygg och fastighet.</h1>
+              <ul class="flex">
+                <li class="col-11-12">
+									<p>Vårt huvudkontor ligger på Södermalm i Stockholm och vi finns i Uppsala, Norrköping, Göteborg, Malmö samt Helsingborg.</p>
+                </li>
+                <li class="col-11-12">
+									<p>Vi har KA-kontrollansvarig och besiktningsmän för alla typer av byggnationer, allt från småhus till flerfamiljs-, kontors-, industrihus.</p>
+                </li>
+                <li class="col-11-12">
+									<p>Våra besiktningsmän är välutbildade av SBR och har en gedigen erfarenhet inom byggsektorn och olika former av besiktningar. <br><br>Samtliga besiktningsmän genomgår årligen flertal kompetenshöjande utbildningar såväl internt som kurser & symposium anordnade av ansvariga branschorganisationer.</p>
+                </li>
+              </ul>
+            </li>
+
+          </ul>
+        </div>
+
+      </div>
+    </div>
+  </div>
+  <div class="background" style="background-image:url(assets/img/img-90.jpg)"></div>
+</section>
+<!-- Slide #91 -->
+<section class="slide fade kenBurns whiteSlide">
+  <div class="content">
+    <div class="container">
+      <div class="wrap">
+
+        <div class="fix-10-12 toCenter">
+          <h1 class="ae-1">Vilka vi är</h1>
+        </div>
+        <div class="fix-12-12">
+					<!--  List one -->
+          <ul class="flex fixedSpaces later left">
+            <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
+							<img class="img-91 wide" src="../assets/img/team/marie_selling.jpg" alt="Image Thumbnail"/>
+              <h3 class="ae-5">Marie Selling</h3>
+              <div class="ae-6">
+								<p class="small">Projekt & Ekonomichef</p>
+								<a href="mailto:marie@besiktningsman.se"><p class="small text-blue">marie@besiktningsman.se</p></a>
+							</div>
+            </li>
+            <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
+							<img class="img-91 wide" src="../assets/img/team/bjorn_selling.jpg" alt="Image Thumbnail"/>
+              <h3 class="ae-5">Björn Selling</h3>
+              <div class="ae-6">
+								<p class="small">Affärschef</p>
+								<a href="mailto:bjorn@besiktningsman.se"><p class="small text-blue">bjorn@besiktningsman.se</p></a>
+							</div>
+            </li>
+            <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
+							<img class="img-91 wide" src="../assets/img/team/jonny_seidel.jpg" alt="Image Thumbnail"/>
+              <h3 class="ae-6">Jonny Seidel</h3>
+              <div class="ae-7">
+								<p class="small">VD</p>
+								<a href="mailto:jonny@besiktningsman.se"><p class="small text-blue">jonny@besiktningsman.se</p></a>
+							</div>
+            </li>
+            <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
+							<img class="img-91 wide" src="../assets/img/team/martin_viberg.jpg" style="width: 257px !important;" alt="Image Thumbnail"/>
+              <h3 class="ae-7">Martin Viberg</h3>
+              <div class="ae-8">
+								<p class="small">Besiktningschef & Besiktningsman</p>
+								<a href="mailto:martin@besiktningsman.se"><p class="small text-blue">martin@besiktningsman.se</p></a>
+							</div>
+            </li>
+          </ul>
+					<!--  List two -->
+          <ul class="flex fixedSpaces later left">
+            <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
+							<img class="img-91 wide" src="../assets/img/team/madeleine_muller.jpg" style="width:257px !important;" alt="Image Thumbnail"/>
+              <h3 class="ae-5">Madeleine Müller</h3>
+              <div class="ae-6">
+								<p class="small">Projektansvarig Storkund</p>
+								<a href="mailto:madeleine@besiktningsman.se"><p class="small text-blue">madeleine@besiktningsman.se</p></a>
+							</div>
+            </li>
+            <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
+							<img class="img-91 wide" src="../assets/img/team/nalle_gellermark.jpg" alt="Image Thumbnail"/>
+              <h3 class="ae-5">Nalle Gellermark</h3>
+              <div class="ae-6"><p class="small">Projektansvarig Privatpersoner</p></div>
+							<a href="mailto:nalle@besiktningsman.se"><p class="small text-blue">nalle@besiktningsman.se</p></a>
+            </li>
+            <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
+							<img class="img-91 wide" src="../assets/img/team/ph_f.png" alt="Image Thumbnail"/>
+              <h3 class="ae-6">Carina Sandgren</h3>
+              <div class="ae-7"><p class="small">Projektassistent</p></div>
+							<a href="mailto:carina@besiktningsman.se"><p class="small text-blue">carina@besiktningsman.se</p></a>
+            </li>
+            <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
+							<img class="img-91 wide" src="../assets/img/team/susanne_pm.jpg" style="width: 257px !important;" alt="Image Thumbnail"/>
+              <h3 class="ae-7">Susanne Linder</h3>
+              <div class="ae-8"><p class="small">Redovisningsekonom</p></div>
+							<a href="mailto:susanne@besiktningsman.se"><p class="small text-blue">susanne@besiktningsman.se</p></a>
+            </li>
+          </ul>
+					<!--  List three -->
+          <ul class="flex fixedSpaces later left">
+            <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
+							<img class="img-91 wide" src="../assets/img/team/olof_johansson.jpg" style="width:257px !important;" alt="Image Thumbnail"/>
+              <h3 class="ae-5">Olof Johansson</h3>
+              <div class="ae-6">
+								<p class="small">Besiktningsman, yeeeeahh</p>
+								<a href="mailto:olof@besiktningsman.se"><p class="small text-blue">olof@besiktningsman.se</p></a>
+							</div>
+            </li>
+            <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
+							<img class="img-91 wide" src="../assets/img/team/rickard_bjork.jpg" alt="Image Thumbnail"/>
+              <h3 class="ae-5">Rickard Björk</h3>
+              <div class="ae-6"><p class="small">Besiktningsman</p></div>
+							<a href="mailto:rickard@besiktningsman.se"><p class="small text-blue">rickard@besiktningsman.se</p></a>
+            </li>
+            <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
+							<img class="img-91 wide" src="../assets/img/team/leif_berg.jpg" alt="Image Thumbnail"/>
+              <h3 class="ae-6">Leif Berg</h3>
+              <div class="ae-7"><p class="small">Besiktningsman</p></div>
+							<a href="mailto:leif@besiktningsman.se"><p class="small text-blue">leif@besiktningsman.se</p></a>
+            </li>
+            <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
+							<img class="img-91 wide" src="../assets/img/team/magnus_engstrom.jpg" style="width: 257px !important;" alt="Image Thumbnail"/>
+              <h3 class="ae-7">Magnus Engström</h3>
+              <div class="ae-8"><p class="small">Besiktningsman</p></div>
+							<a href="mailto:magnus@besiktningsman.se"><p class="small text-blue">magnus@besiktningsman.se</p></a>
+            </li>
+          </ul>
+					<!--  List four -->
+          <ul class="flex fixedSpaces later left">
+            <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
+							<img class="img-91 wide" src="../assets/img/team/jose_escobar.jpg" alt="Image Thumbnail"/>
+              <h3 class="ae-5">Jose Escobar</h3>
+              <div class="ae-6">
+								<p class="small">Besiktningsman</p>
+								<a href="mailto:jose@besiktningsman.se"><p class="small text-blue">jose@besiktningsman.se</p></a>
+							</div>
+            </li>
+            <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
+							<img class="img-91 wide" src="../assets/img/team/lasse_grandahl.jpg" style="width:257px !important;" alt="Image Thumbnail"/>
+              <h3 class="ae-5">Lasse Grandahl</h3>
+              <div class="ae-6"><p class="small">Besiktningsman</p></div>
+							<a href="mailto:rickard@besiktningsman.se"><p class="small text-blue">lasse@besiktningsman.se</p></a>
+            </li>
+            <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
+							<img class="img-91 wide" src="../assets/img/team/orjan_hoglund.jpg" alt="Image Thumbnail"/>
+              <h3 class="ae-6">Örjan Höglund</h3>
+              <div class="ae-7"><p class="small">Besiktningsman</p></div>
+							<a href="mailto:orjan@besiktningsman.se"><p class="small text-blue">orjan@besiktningsman.se</p></a>
+            </li>
+            <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
+							<img class="img-91 wide" src="../assets/img/team/charlie_hoglund.jpg" style="width: 257px !important;" alt="Image Thumbnail"/>
+              <h3 class="ae-7">Charlie Höglund</h3>
+              <div class="ae-8"><p class="small">Besiktningsman</p></div>
+							<a href="mailto:charlie@besiktningsman.se"><p class="small text-blue">charlie@besiktningsman.se</p></a>
+            </li>
+          </ul>
+					<!--  List five -->
+          <ul class="flex fixedSpaces later left">
+            <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
+							<img class="img-91 wide" src="../assets/img/team/jeanette_immo.jpg" alt="Image Thumbnail"/>
+              <h3 class="ae-5">Jeanette Immo</h3>
+              <div class="ae-6">
+								<p class="small">Besiktningsman</p>
+								<a href="mailto:jeanette@besiktningsman.se"><p class="small text-blue">jeanette@besiktningsman.se</p></a>
+							</div>
+            </li>
+            <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
+							<img class="img-91 wide" src="../assets/img/team/dan_jakobsson.jpg" style="width:257px !important;" alt="Image Thumbnail"/>
+              <h3 class="ae-5">Dan Jakobsson</h3>
+              <div class="ae-6"><p class="small">Besiktningsman</p></div>
+							<a href="mailto:dan@besiktningsman.se"><p class="small text-blue">dan@besiktningsman.se</p></a>
+            </li>
+            <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
+							<img class="img-91 wide" src="../assets/img/team/ulf_johansson.jpg" style="width:257px !important;" alt="Image Thumbnail"/>
+              <h3 class="ae-6">Ulf johansson</h3>
+              <div class="ae-7"><p class="small">Besiktningsman</p></div>
+							<a href="mailto:ulf@besiktningsman.se"><p class="small text-blue">ulf@besiktningsman.se</p></a>
+            </li>
+            <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
+							<img class="img-91 wide" src="../assets/img/team/ari_laukka.jpg" style="width: 257px !important;" alt="Image Thumbnail"/>
+              <h3 class="ae-7">Ari Laukka</h3>
+              <div class="ae-8"><p class="small">Besiktningsman</p></div>
+							<a href="mailto:ari@besiktningsman.se"><p class="small text-blue">ari@besiktningsman.se</p></a>
+            </li>
+          </ul>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</section>
+
 
 	<!-- Slide 2 (#56) -->
 	<section class="slide whiteSlide" style="background: rgba(246, 247, 249, 0.64);">
