about us page headers

--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -236,6 +236,7 @@
 
         <div class="fix-10-12 toCenter">
           <h1 class="ae-1">Vilka vi är</h1>
+					<p class="bold">Ledning</p>
         </div>
         <div class="fix-12-12">
 					<!--  List one -->
@@ -274,6 +275,7 @@
             </li>
           </ul>
 					<!--  List two -->
+					<p class="bold">Projektavdelning</p>
           <ul class="flex fixedSpaces later left">
             <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
 							<img class="img-91 wide" src="../assets/img/team/madeleine_muller.jpg" style="width:257px !important;" alt="Image Thumbnail"/>
@@ -303,6 +305,7 @@
             </li>
           </ul>
 					<!--  List three -->
+					<p class="bold">Besiktningsmän</p>
           <ul class="flex fixedSpaces later left">
             <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
 							<img class="img-91 wide" src="../assets/img/team/olof_johansson.jpg" style="width:257px !important;" alt="Image Thumbnail"/>
